--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,33 +11,63 @@
     <script src="./js/index.js"></script>
     <script src="js/class.compra.js"></script>
     <script src="js/main.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
 </head>
+
 <body class="textCenter">
     <h1> Mi Compu Online</h1>
     <main>
-    <div class="divProductos">
-        <h2>Productos</h2>
-        <ul>
-    <li>🧩 Procesadores </li>
-    <li> 🗃️ Memoria ram </li>
-    <li>  💻Mothers </li>
-    <li> 💽 Almacenamiento </li>
-    <li>  🖥️Gabinete </li>
-    </ul>
+        <div class="divProductos">
+            <h2>Productos</h2>
+            <ul>
+                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <div class="container-fluid">
+                      <a class="navbar-brand" href="#"> 🧩 Procesadores </a>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">🗃️ Memoria ram</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">💻Mothers</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">🖥️Gabinete</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#"></a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link "> 💽 Almacenamiento </a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
 
-</div>
-<div class=" div-cotizar">
-    <p> Ejecuta la funcion <strong>preguntarPrecios()</strong> en la consola  Js</p>
-</div>
+            </ul>
+
+        </div>
+        <div class=" div-cotizar">
+            <p> Ejecuta la funcion <strong>preguntarPrecios()</strong> en la consola Js</p>
+            <p> para comprar ejecutar la funcion <strong> comprar() </strong> en la consola Js <p>
+        </div>
 
 
-</main>
-<footer>
-    
-    <p> La Tienda mas Grande de Argentina</p>
-</footer>
+    </main>
+    <footer>
+
+        <p> La Tienda mas Grande de Argentina</p>
+    </footer>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 
 </html>
